--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ToDoApp",
   "version": "0.0.1",
   "private": true,
+  "main": "server.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,8 +11,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
+    "color": "^4.2.3",
+    "expo-font": "^11.10.3",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
